k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replica: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels: api
    specs:
      containers:
        - name: api
          image: pepperonipizzalarge/onnx-api
          ports:
            - containerPort: 5000
